--- a/mvc3/Views/Employee/Index.cshtml
+++ b/mvc3/Views/Employee/Index.cshtml
@@ -71,7 +71,7 @@
                         }
                     </td>
                  
-             <partial name="_ButtonPartial" model="@item.Id"> </partial>
+             <partial name="_ButtonPartial" model="@item.Id.ToString()"> </partial>
               
             </tr>
         }
