--- a/mvc3/Views/Employee/Create.cshtml
+++ b/mvc3/Views/Employee/Create.cshtml
@@ -16,7 +16,9 @@
    
 </form>
 @section validation{
-    <script>src = " ~\lib\jquery-validation\dist\jquery.validate.min.js"</script>
-    <script>src = "~\lib\jquery-validation-unobtrusive\jquery.validate.unobtrusive.min.js"</script>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+
+   
 }
 
