--- a/mvc3/Views/Shared/_Layout.cshtml
+++ b/mvc3/Views/Shared/_Layout.cshtml
@@ -32,7 +32,29 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="Employee" asp-action="Index">Employee</a>
                         </li>
+                        @if (User.IsInRole("superadmin"))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="user" asp-action="Index">user</a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="role" asp-action="Index">roles</a>
+                        </li>
+                        }
                     </ul>
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="account" asp-action="SignOut">logout</a>
+                        </li>
+                    }
+                    else
+                    {
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="account" asp-action="login">login</a>
+                        </li>
+                    }
                 </div>
             </div>
         </nav>
